# sensor_fusion

./: .gitignore  README.md
00_kalman_filter_basic/: kalman_filter.md
01_lidar_module/: CMakeLists.txt  README.md
01_lidar_module/src/: environment.cpp  processPointClouds.cpp  processPointClouds.h
01_lidar_module/src/quiz/cluster/: cluster.cpp
01_lidar_module/src/quiz/ransac/: ransac2d.cpp
01_lidar_module/src/render/: render.cpp
02_camera_module/: README.md
02_camera_module/Final Project - Track an Object in 3D Space/: CMakeLists.txt
02_camera_module/Final Project - Track an Object in 3D Space/report/: Final_Project_Data_Log_Save.csv  Final_Project_Data_Processed.xlsx  (+1 more)
02_camera_module/Project - Camera Based 2D Feature Tracking/: Midterm_Data_Log_Processed.xlsx  Midterm_Data_Results.csv  Midterm_Data_TopModels.csv
04_kalman_filter_module/: kalman_filter_quiz_1.py
04_kalman_filter_module/LiDAR and Radar Fusion with Kalman Filter in C++/: Jacobian Computation.cpp  Kalman Filter C++ Implementation.cpp  RMSE Performance Metric.cpp
04_kalman_filter_module/Unscented Kalman Filter Highway Project/: CMakeLists.txt  README.md
04_kalman_filter_module/Unscented Kalman Filters Modules/: CMakeLists.txt
04_kalman_filter_module/Unscented Kalman Filters Modules/02_PREDICT_augmentation/: ukf.cpp
04_kalman_filter_module/Unscented Kalman Filters Modules/03_PREDICT_prediction_sigma/: main.cpp
04_kalman_filter_module/Unscented Kalman Filters Modules/05_UPDATE_radar_measurement_prediction/: ukf.h
04_kalman_filter_module/Unscented Kalman Filters Modules/06_UPDATE_update_mean_and_covariance/: ukf.h
05_sensor_fusion_demo_py/: 1D_kalman.py  ekf_demo.py  readme.md
05_sensor_fusion_demo_py/data/: EKF.html  output.txt  plot.py
05_sensor_fusion_demo_py/ukf-code/: main.cpp
kalman_filter_basic/: gaussian.cc
lidar_module/: README.md
lidar_module/src/: environment.cpp  processPointClouds.cpp
sensor_fusion/: 1D_kalman.py  kf_demo.py
sensor_fusion/data/: output1.csv
sensor_fusion/ukf-code/: CMakeLists.txt  ground_truth_package.h  ukf.cpp  ukf.h
(+56 files in other folders)
